// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTPStatusLabel should render a danger label for 4xx HTTP status code 1`] = `
<div
  class="badge upperCase"
>
  400 BAD REQUEST
</div>
`;

exports[`HTTPStatusLabel should render a danger label for 5xx HTTP status code 1`] = `
<div
  class="badge upperCase"
>
  500 INTERNAL SERVER ERROR
</div>
`;

exports[`HTTPStatusLabel should render a primary label for 3xx HTTP status code 1`] = `
<div
  class="badge upperCase"
>
  300 MULTIPLE CHOICES
</div>
`;

exports[`HTTPStatusLabel should render a secondary label for 1xx HTTP status code 1`] = `
<div
  class="badge upperCase"
>
  100 CONTINUE
</div>
`;

exports[`HTTPStatusLabel should render a secondary label for unknown HTTP status code 1`] = `
<div
  class="badge upperCase"
>
  78 UNKNOWN HTTP STATUS CODE
</div>
`;

exports[`HTTPStatusLabel should render a success label for 2xx HTTP status code 1`] = `
<div
  class="badge upperCase"
>
  200 OK
</div>
`;

exports[`HTTPStatusLabel should render an error label for undefined requests 1`] = `
<div
  class="badge upperCase"
>
  FAILED TO BUILD REQUEST
</div>
`;

exports[`HTTPStatusLabel should render an error label for undefined statusCode 1`] = `
<div
  class="badge upperCase"
>
  HTTP REQUEST FAILED
</div>
`;
